--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.0",
+    "@ngxs/store": "^3.0.0-beta.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.9",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
@@ -35,6 +36,8 @@
     "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@ngxs/devtools-plugin": "^3.0.0-rc.0",
+    "@ngxs/logger-plugin": "^3.0.0-rc.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
