--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve  --host 0.0.0.0 --port 4200 --disable-host-check ",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,10 +24,14 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.0",
+    "@ngx-loading-bar/http-client": "^1.6.0",
+    "@ngx-loading-bar/router": "^1.6.0",
     "@ngxs/store": "^3.0.0-beta.0",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
+    "ngx-toastr": "^8.4.0",
     "rxjs": "^5.5.9",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
