--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve  --host 0.0.0.0 --port 4200 --disable-host-check ",
+    "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,6 +30,7 @@
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "ngx-toastr": "^8.4.0",
     "rxjs": "^5.5.9",
@@ -44,6 +45,7 @@
     "@ngxs/logger-plugin": "^3.0.0-rc.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
