refactor(service): refactor api call requests

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "AngularDemo",
-  "short_name": "ngDemo",
+  "short_name": "ngdemo",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
